Import for mysql driver

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 DRIVER="mysql"
 BACKUP_DIR_PATH=""
-DB_HOST=""
-DB_USERNAME=""
-DB_PASSWORD=""
+HOST=""
+USERNAME=""
+PASSWORD=""
+DATABASE=""
+IMPORT_FILE_PATH=""
